--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -10,6 +10,8 @@ $select-multyple-height: 100px;
 
 $box-shadow: 0 1px 1px 0 rgba(60, 75, 100, .14), 0 2px 1px -1px rgba(60, 75, 100, .12), 0 1px 3px 0 rgba(60, 75, 100, .2);
 $border-color: rgba(0, 0, 0, .125);
+$table-bg: rgba(60, 75, 100, 0.1);
+$table-hover: rgba(60, 75, 100, 0.05);
 
 
 // Typography
