--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,7 +5,7 @@ $body-bg: #f8fafc;
 $box-shadow-block: 0 1px 1px 0 rgba(60, 75, 100, .14), 0 2px 1px -1px rgba(60, 75, 100, .12), 0 1px 3px 0 rgba(60, 75, 100, .2);
 
 // Tables
-$table-bg: rgba(60, 75, 100, 0.1);
+$table-bg: rgba(221, 235, 247);
 $table-hover: rgba(60, 75, 100, 0.05);
 
 // Typography
