--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,7 +3,7 @@
 // Preloader
 @import "~spinkit/spinkit.min.css";
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import 'fonts.scss';
 // Variables
 @import 'variables';
 // Bootstrap
