--- a/resources/sass/_table.scss
+++ b/resources/sass/_table.scss
@@ -49,6 +49,10 @@
     padding: 0.25rem;
     cursor: default;
 
+    &.red {
+      color: red;
+    }
+
     &:first-child {
       width: 150px;
     }
