--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 @import 'buttons';
 @import 'card';
 @import 'check';
+@import 'checkbox';
 @import 'fonts';
 @import 'forms';
 @import 'hamburgers';
