--- a/resources/sass/_v-table.scss
+++ b/resources/sass/_v-table.scss
@@ -8,7 +8,7 @@
 /* ЭЛЕМЕНТ заголовков таблицы */
 .v-table__head {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  //grid-template-columns: repeat(5, 1fr);
   grid-gap: 1px;
 }
 
@@ -20,7 +20,8 @@
   background: #E9ECF0;
 
   &:first-child {
-    grid-row: 1 / 3;
+    grid-column: 1 / span 1;
+    //grid-row: 1 / span 2;
   }
 }
 
